[tool.poetry]
name = "asot-client"
version = "0.1.0"
description = "Client for asot, a localhost tunneling solution"
authors = ["Luna"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^9.1"
httpx = "^0.18.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
asot = "asot_client:main_cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
