[tool.poetry]
name = "asot"
version = "0.1.0"
description = "Localhost tunneling"
authors = ["Luna"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"
Quart = "^0.15.1"
quart-schema = "^0.10.0"
tomlkit = "^0.7.2"
aiosqlite = "^0.17.0"
agnostic = {extras = ["sqlite"], version = "^1.0.2"}
violet = {git = "https://gitlab.com/elixire/violet"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
